--- a/config/locales/ja.yml
+++ b/config/locales/ja.yml
@@ -2,6 +2,7 @@ ja:
   activerecord:
     models:
       user: ユーザー
+      review:
     attributes:
       user:
         name: 名前
@@ -12,3 +13,5 @@ ja:
         image: アイコン画像
         current_password: 現在のパスワード
         password_confirmation: 確認用パスワード
+      review:
+        content: レビュー内容
